# civic_sentiment

./: LICENSE  Makefile  README.md  pyproject.toml
civic_sentiment/: __init__.py  config.py  dataset.py  features.py  plots.py  scraping.py
civic_sentiment/modeling/: predict.py  train.py
data/processed/: inference_comments.csv  training_comments.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-data-collection.ipynb
