[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "civic_sentiment"
version = "0.0.1"
description = "Civic Sentiment is a sentiment analysis project focused on public comments responding to official government and parliamentary statements, especially around demonstrations, civic demands, and major political issues."
authors = [
  { name = "Rijal" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "google-api-python-client",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["civic_sentiment"]
include = ["pyproject.toml", "civic_sentiment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["civic_sentiment"]
force-sort-within-sections = true

